Fix overflow bug in start page bookmarks management

--- a/app/stylesheets/builtin-pages/start.less
+++ b/app/stylesheets/builtin-pages/start.less
@@ -143,6 +143,7 @@ header {
 .bookmark {
   padding: 2px;
   height: auto;
+  white-space: nowrap;
 
   &__pin {
     margin-right: 10px;
